--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -10,6 +10,8 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  text-align: center;
+  margin: 30px;
 }
 
 /* do not edit this footer */
@@ -23,4 +25,19 @@ img {
   align-items: center;
   justify-content: center;
   background: #eee;
+}
+
+.parent {
+  display: flex;
+  justify-content: center;
+  gap: 52px;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 15px;
+  max-width: 200px;
 }
